updated README, changed a couple stylings to fix tile image alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,6 @@
   margin-left: 5px;
 }
 
-
 header {
   color: aliceblue;
   font-size: 30px;
@@ -38,6 +37,9 @@ header h1 {
   width: 100%;
 }
 
+.image {
+  margin-left: -7px;
+}
 
 @media screen and (max-width: 768px) {
   head,
